feat: :art: Adicionado a tela sobre, contato, login, cadastro
Primeira versão de cada tela

--- a/stocktrade/src/main/resources/templates/cadastroPage.html
+++ b/stocktrade/src/main/resources/templates/cadastroPage.html
@@ -117,14 +117,14 @@
             </li>
             <li>
               <a
-                href="sobrePage.html"
+                href="#"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contatoPage.html"
+                href="#"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
@@ -137,38 +137,49 @@
             </button> -->
 
             <a href="loginPage.html" class="btn btn-outline-primary botao1 me-4">Login</a>
-
             <a href="cadastroPage.html" class="btn btn-outline-primary botao1 me-4">Cadastre-se</a>
- 
-            <!-- <button type="button" class="btn btn-primary botao1">
-              Cadastre-se
-            </button> -->
+
           </div>
         </header>
       </div>
 
-      <div class="container-fluid mt-4 mb-4">
-        <div class="row ms-5">
-          <div class="col-md-6 mt-5 texts">
-            <h1 class="titulo1 h1 max-width-600px">Compre e Venda suas ações</h1>
-            <p class="fs-6 mt-4 mb-3 max-width-500px">
-              A StockTrade oferece um amplo leque de ativos e um expressivo
-              compromisso com a transparência e a educação do investidor,
-              tornando mais fácil e seguro a tomada de decisões e auxiliando o
-              consumidor a construir um futuro financeiro sólido.
-            </p>
+      <div class="container-fluid container-img-background2">
+        <div class="row justify-content-end">
+          <div class="col-md-4"> 
+            <div class="card2">
+              <div class="card-body">
+                <!-- <h5 class="card-title text-color-blue text-uppercase">Login</h5> -->
+                <form>
+                  <div class="mb-3">
+                    <label for="username" class="form-label text-color-blue text-uppercase">Nome</label>
+                    <input type="text" class="form-control custom-input" id="name" placeholder="Digite seu nome completo">
+                  </div>
+                  <div class="mb-3">
+                    <label for="username" class="form-label text-color-blue text-uppercase">CPF</label>
+                    <input type="text" class="form-control custom-input" id="cpf" placeholder="Digite seu CPF">
+                  </div>
+                  <div class="mb-3">
+                    <label for="username" class="form-label text-color-blue text-uppercase">Email</label>
+                    <input type="text" class="form-control custom-input" id="username" placeholder="Digite seu email">
+                  </div>
+                  <div class="mb-3">
+                    <label for="password" class="form-label text-color-blue text-uppercase">Senha</label>
+                    <input type="password" class="form-control custom-input" id="password" placeholder="Digite sua senha">
+                  </div>
+                  <div class="mb-3">
+                    <label for="username" class="form-label text-color-blue text-uppercase">Confirme a Senha</label>
+                    <input type="text" class="form-control custom-input" id="confirmpassword" placeholder="Digite sua senha novamente">
+                  </div>
+                  <div class="text-center"> <!-- Adicionando um div para centralizar o botão -->
+                    <button type="submit" class="btn btn-outline-primary botao1 mb-3 mt-3">Cadastrar</button>
+                  </div>
+                </form>
+              </div>    
+            </div>
           </div>
-          <div class="col-md-6 d-flex justify-content-end">
-            <img
-              src="../static/images/laptop-home.png"
-              alt="Imagem laptop"
-              class="img-fluid"
-              style="width: 90%;"
-            />
-          </div>
-          
         </div>
       </div>
+      
 
       <footer class="footer py-3 container-fluid mt-5">
         <div class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5">
