--- a/stocktrade/src/main/resources/templates/sobrePage.html
+++ b/stocktrade/src/main/resources/templates/sobrePage.html
@@ -117,14 +117,14 @@
             </li>
             <li>
               <a
-                href="sobrePage.html"
+                href="#"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contatoPage.html"
+                href="#"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
@@ -146,30 +146,96 @@
           </div>
         </header>
       </div>
-
+      
       <div class="container-fluid mt-4 mb-4">
-        <div class="row ms-5">
+        <div class="row justify-content-center">
           <div class="col-md-6 mt-5 texts">
-            <h1 class="titulo1 h1 max-width-600px">Compre e Venda suas ações</h1>
+            <h2 class="titulo h2 max-width-600px">Sobre StockTrade</h2>
             <p class="fs-6 mt-4 mb-3 max-width-500px">
-              A StockTrade oferece um amplo leque de ativos e um expressivo
-              compromisso com a transparência e a educação do investidor,
-              tornando mais fácil e seguro a tomada de decisões e auxiliando o
-              consumidor a construir um futuro financeiro sólido.
+                A StockTrade, uma empresa líder no mercado financeiro, destacando-se como uma plataforma revolucionária para investidores de todos os níveis. Apresenta uma interface intuitiva e um amplo leque de recursos. Buscamos oferecer uma experiência única de compra e venda de ações, conectando investidores a oportunidades globais de crescimento.
             </p>
           </div>
-          <div class="col-md-6 d-flex justify-content-end">
-            <img
-              src="../static/images/laptop-home.png"
-              alt="Imagem laptop"
-              class="img-fluid"
-              style="width: 90%;"
-            />
-          </div>
-          
         </div>
       </div>
 
+      <div class="container mb-10">
+        <div class="row g-0">
+
+          <!-- Linha1 dos cards -->
+          <div class="form-row">
+            <!-- Card 1 -->
+            <div class="mb-3 custom-card">
+              <div class="row g-0 pt-3">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                  <img src="../static/images/seguranca-icon.png" class="img-fluid rounded-start" alt="seguranca">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">SEGURANÇA</h5>
+                    <p class="card-text">A StockTrade apresenta ao usuário um sistema que garante a seguridade nas suas transações. Oferecendo um feedback completo das compras e vendas realizadas no site.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="mb-3 custom-card">
+              <div class="row g-0 pt-3">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                  <img src="../static/images/conexao-icon.png" class="img-fluid rounded-start" alt="conexao">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">CONEXÃO</h5> 
+                    <p class="card-text">Oferecemos ao usuário um amplo mercado de trades. Atendendo as necessidades de todos os clientes independente da sua localização.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          
+           
+          <!-- Linha2 dos cards -->
+          <div class="form-row">
+         <!-- Card 3 -->
+          <div class="mb-3 custom-card">
+              <div class="row g-0 pt-3">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                  <img src="../static/images/transparencia-icon.png" class="img-fluid rounded-start" alt="transparencia">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">TRANSPARÊNCIA</h5>
+                    <p class="card-text">A StockTrade assegura um excelente vínculo com o usuário. Disponibilizamos métodos seguros de depósito, saque e um atendimento de alta qualidade para atender todas as suas necessidades.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="mb-3 custom-card">
+              <div class="row g-0 pt-3">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                  <img src="../static/images/edu-financeira-icon.png" class="img-fluid rounded-start" alt="edu-financeira">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">EDUCAÇÃO FINANCEIRA</h5>
+                    <p class="card-text">Aprenda a gerir suas finanças da melhor maneira. A StockTrade proporciona dicas e vídeos para aprimorar a sua gestão financeira.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+          </div>
+          </div>  
+
+ 
       <footer class="footer py-3 container-fluid mt-5">
         <div class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5">
           <!-- Logo à esquerda -->
@@ -234,10 +300,3 @@
           </ul>
         </div>
       </footer>
-      
-    </main>
-
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-    
-  </body>
-</html>
