--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -8,6 +8,11 @@ body {
   font-size: 14px;
 }
 
+.small-logo2{
+  max-width: 50%;
+  height: auto;
+}
+
 .smaller-logo {
   max-width: 15%;
   height: auto;
@@ -48,6 +53,17 @@ body {
   font-size: 16px;
 }
 
+.sobreMenu {
+  background-color: #010D50;
+  border-radius: 20px;
+  border-style: none;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 60px 120px;
+  transition: background-color 0.3s;
+  font-size: 16px;
+}
+
 .botao1:hover {
   background-color: #031FB4;
 }
@@ -61,6 +77,18 @@ body {
   font-size: 80px;
 }
 
+.h2{
+  font-size: 64px; 
+}
+
+.h3{
+  font-size: 16px;
+}
+
+.max-width-800px {
+  max-width: 800px;
+}
+
 .max-width-600px {
   max-width: 600px;
 }
@@ -71,5 +99,95 @@ body {
 
 footer{
   background-color: #010D50;
+  bottom: 0;
+  position: fixed;
+}
 
+.text-color-blue{
+  color: #010D50;
+}
+
+.custom-input {
+  background-color: #010D50;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  width: 100%;
+  height: 50px;
+}
+
+.custom-input::placeholder {
+  color: #fff;
+}
+
+.custom-input:focus {
+  background-color: rgb(95, 95, 95);
+  border-color: #a0a0a0;
+  box-shadow: none;
+  color: #010D50 !important;
+}
+
+.custom-card {
+  background-color: #010D50;
+  color: #fff;
+  border: none;
+  border-radius: 60px;
+  width: 600px;
+  height: 200px;
+  margin: 0;
+
+
+}
+
+.text-center {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.card {
+  max-width: 500px;
+  overflow-y: auto;
+  border-radius: 20px;
+  margin-top: 30%;
+  margin-bottom: 30%;
+}
+
+.card2 {
+  max-width: 600px;
+  /* overflow-y: auto; */
+  border-radius: 20px;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  /* padding-left: 20%; */
+}
+
+.card-body{
+  padding-top: 5%;
+  padding-bottom: 5%;
+
+}
+
+.container-img-background {
+  background-image: url('../images/login-pic.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.container-img-background2 {
+  background-image: url('../images/cadastro-pic.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+}
+
+.form-row > div {
+  float: left;
+  width: 50%;
+  padding-left: .25rem!important;
+  padding-right: .25rem!important;
+}
+
+.mb-10 {
+  margin-bottom: 10%;
 }
