--- a/stocktrade/src/main/resources/templates/contatoPage.html
+++ b/stocktrade/src/main/resources/templates/contatoPage.html
@@ -117,14 +117,14 @@
             </li>
             <li>
               <a
-                href="sobrePage.html"
+                href="#"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contatoPage.html"
+                href="#"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
@@ -137,40 +137,53 @@
             </button> -->
 
             <a href="loginPage.html" class="btn btn-outline-primary botao1 me-4">Login</a>
-
             <a href="cadastroPage.html" class="btn btn-outline-primary botao1 me-4">Cadastre-se</a>
- 
-            <!-- <button type="button" class="btn btn-primary botao1">
-              Cadastre-se
-            </button> -->
+            
           </div>
         </header>
       </div>
 
-      <div class="container-fluid mt-4 mb-4">
-        <div class="row ms-5">
-          <div class="col-md-6 mt-5 texts">
-            <h1 class="titulo1 h1 max-width-600px">Compre e Venda suas ações</h1>
-            <p class="fs-6 mt-4 mb-3 max-width-500px">
-              A StockTrade oferece um amplo leque de ativos e um expressivo
-              compromisso com a transparência e a educação do investidor,
-              tornando mais fácil e seguro a tomada de decisões e auxiliando o
-              consumidor a construir um futuro financeiro sólido.
-            </p>
+      <div class="container-fluid mt-5 justify-content-center pe-5 ps-5 mt-3">
+        <div class="row justify-content-center mt-5">
+          <!-- Coluna dos campos do formulário -->
+          <div class="col-md-6">
+            <h1 class="h1">Contate-nos!</h1>
+            <form>
+                <div class="form-row">
+                    <div class="col-md-6 mb-3">
+                        <label for="nome" class="form-label">Nome</label>
+                        <input type="text" class="form-control custom-input" id="nome" placeholder="Digite seu nome">
+                    </div>  
+                    <div class="col-md-6 mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control custom-input" id="email" placeholder="Digite seu email">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="mb-3">
+                        <label for="empresa" class="form-label">Empresa</label>
+                        <input type="text" class="form-control custom-input" id="empresa" placeholder="Digite o nome da empresa">
+                      </div>
+                      <div class="mb-3">
+                        <label for="assunto" class="form-label">Assunto</label>
+                        <input type="text" class="form-control custom-input" id="assunto" placeholder="Digite o assunto">
+                      </div>
+                </div>
+              
+              <div class="mb-3 ps-1">
+                <label for="mensagem" class="form-label">Mensagem</label>
+                <textarea class="form-control custom-input" id="mensagem" rows="50" placeholder="Digite sua mensagem"></textarea>
+              </div>
+              <div class="text-center">
+                <button type="submit" class="btn btn-outline-primary botao1 me-4">Enviar mensagem</button>
+              </div>
+            </form>
           </div>
-          <div class="col-md-6 d-flex justify-content-end">
-            <img
-              src="../static/images/laptop-home.png"
-              alt="Imagem laptop"
-              class="img-fluid"
-              style="width: 90%;"
-            />
-          </div>
-          
         </div>
-      </div>
+      
+      
 
-      <footer class="footer py-3 container-fluid mt-5">
+      <footer class="footer py-3 container-fluid">
         <div class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5">
           <!-- Logo à esquerda -->
           <img
