--- a/stocktrade/src/main/resources/templates/cadastroPage.html
+++ b/stocktrade/src/main/resources/templates/cadastroPage.html
@@ -146,7 +146,7 @@
       <div class="container-fluid container-img-background2">
         <div class="row justify-content-end">
           <div class="col-md-4"> 
-            <div class="card2">
+            <div class="card">
               <div class="card-body">
                 <!-- <h5 class="card-title text-color-blue text-uppercase">Login</h5> -->
                 <form>
