fix: :art: Pequenas correções de alinhamento e links

--- a/stocktrade/src/main/resources/templates/cadastroPage.html
+++ b/stocktrade/src/main/resources/templates/cadastroPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
 
-    <title>StockTrade</title>
+    <title>StockTrade - Cadastro</title>
 
     <link
       rel="canonical"
