--- a/stocktrade/src/main/resources/templates/sobrePage.html
+++ b/stocktrade/src/main/resources/templates/sobrePage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
 
-    <title>StockTrade</title>
+    <title>StockTrade - Sobre</title>
 
     <link
       rel="canonical"
@@ -105,11 +105,11 @@
         </header>
       </div>
 
-      <div class="container-fluid mb-4">
-        <div class="row justify-content-center">
-          <div class="col-md-6 mb-5 texts">
-            <h2 class="titulo h2 max-width-600px">Sobre StockTrade</h2>
-            <p class="fs-6 mt-4 mb-3 max-width-500px">
+      <div class="container mb-4 justify-content-center">
+        <div class="container row justify-content-center">
+          <div class="col-md-6 mb-5 texts justify-content-center">
+            <h2 class="titulo h2 max-width-550px">Sobre StockTrade</h2>
+            <p class="fs-6 mt-4 mb-3 max-width-550px">
               A StockTrade, uma empresa líder no mercado financeiro,
               destacando-se como uma plataforma revolucionária para investidores
               de todos os níveis. Apresenta uma interface intuitiva e um amplo
@@ -122,108 +122,110 @@
       </div>
 
       <div class="container mb-10">
-        <div class="row g-1 gy-1">
-          <!-- Linha1 dos cards -->
-          <div class="form-row">
-            <!-- Card 1 -->
-            <div class="mb-3 me-3 custom-card">
-              <div class="row g-0 pt-3">
-                <div
-                  class="col-md-4 d-flex justify-content-center align-items-center"
-                >
-                  <img
-                    src="../static/images/seguranca-icon.png"
-                    class="img-fluid rounded-start"
-                    alt="seguranca"
-                  />
+        <div class="container justify-content-center">
+          <div class="row g-1 gy-1">
+            <!-- Linha1 dos cards -->
+            <div class="form-row">
+              <!-- Card 1 -->
+              <div class="mb-3 me-3 custom-card">
+                <div class="row g-0 pt-3">
+                  <div
+                    class="col-md-4 d-flex justify-content-center align-items-center"
+                  >
+                    <img
+                      src="../static/images/seguranca-icon.png"
+                      class="img-fluid rounded-start"
+                      alt="seguranca"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">SEGURANÇA</h5>
+                      <p class="card-text">
+                        A StockTrade apresenta ao usuário um sistema que garante
+                        a seguridade nas suas transações. Oferecendo um feedback
+                        completo das compras e vendas realizadas no site.
+                      </p>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">SEGURANÇA</h5>
-                    <p class="card-text">
-                      A StockTrade apresenta ao usuário um sistema que garante a
-                      seguridade nas suas transações. Oferecendo um feedback
-                      completo das compras e vendas realizadas no site.
-                    </p>
+              </div>
+
+              <!-- Card 2 -->
+              <div class="mb-3 custom-card ms-5 justify-content-end">
+                <div class="row g-0 pt-3">
+                  <div
+                    class="col-md-4 d-flex justify-content-center align-items-center"
+                  >
+                    <img
+                      src="../static/images/conexao-icon.png"
+                      class="img-fluid rounded-start"
+                      alt="conexao"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">CONEXÃO</h5>
+                      <p class="card-text">
+                        Oferecemos ao usuário um amplo mercado de trades.
+                        Atendendo as necessidades de todos os clientes
+                        independente da sua localização.
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
 
-            <!-- Card 2 -->
-            <div class="mb-3 custom-card">
-              <div class="row g-0 pt-3">
-                <div
-                  class="col-md-4 d-flex justify-content-center align-items-center"
-                >
-                  <img
-                    src="../static/images/conexao-icon.png"
-                    class="img-fluid rounded-start"
-                    alt="conexao"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">CONEXÃO</h5>
-                    <p class="card-text">
-                      Oferecemos ao usuário um amplo mercado de trades.
-                      Atendendo as necessidades de todos os clientes
-                      independente da sua localização.
-                    </p>
+            <!-- Linha2 dos cards -->
+            <div class="form-row">
+              <!-- Card 3 -->
+              <div class="mb-3 me-3 custom-card">
+                <div class="row g-0 pt-3">
+                  <div
+                    class="col-md-4 d-flex justify-content-center align-items-center"
+                  >
+                    <img
+                      src="../static/images/transparencia-icon.png"
+                      class="img-fluid rounded-start"
+                      alt="transparencia"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">TRANSPARÊNCIA</h5>
+                      <p class="card-text">
+                        A StockTrade assegura um excelente vínculo com o
+                        usuário. Disponibilizamos métodos seguros de depósito,
+                        saque e um atendimento de alta qualidade para atender
+                        todas as suas necessidades.
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
 
-          <!-- Linha2 dos cards -->
-          <div class="form-row">
-            <!-- Card 3 -->
-            <div class="mb-3 me-3 custom-card">
-              <div class="row g-0 pt-3">
-                <div
-                  class="col-md-4 d-flex justify-content-center align-items-center"
-                >
-                  <img
-                    src="../static/images/transparencia-icon.png"
-                    class="img-fluid rounded-start"
-                    alt="transparencia"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">TRANSPARÊNCIA</h5>
-                    <p class="card-text">
-                      A StockTrade assegura um excelente vínculo com o usuário.
-                      Disponibilizamos métodos seguros de depósito, saque e um
-                      atendimento de alta qualidade para atender todas as suas
-                      necessidades.
-                    </p>
+              <!-- Card 4 -->
+              <div class="mb-3 ms-5 custom-card">
+                <div class="row g-0 pt-3">
+                  <div
+                    class="col-md-4 d-flex justify-content-center align-items-center"
+                  >
+                    <img
+                      src="../static/images/edu-financeira-icon.png"
+                      class="img-fluid rounded-start"
+                      alt="edu-financeira"
+                    />
                   </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Card 4 -->
-            <div class="mb-3 custom-card">
-              <div class="row g-0 pt-3">
-                <div
-                  class="col-md-4 d-flex justify-content-center align-items-center"
-                >
-                  <img
-                    src="../static/images/edu-financeira-icon.png"
-                    class="img-fluid rounded-start"
-                    alt="edu-financeira"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">EDUCAÇÃO FINANCEIRA</h5>
-                    <p class="card-text">
-                      Aprenda a gerir suas finanças da melhor maneira. A
-                      StockTrade proporciona dicas e vídeos para aprimorar a sua
-                      gestão financeira.
-                    </p>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">EDUCAÇÃO FINANCEIRA</h5>
+                      <p class="card-text">
+                        Aprenda a gerir suas finanças da melhor maneira. A
+                        StockTrade proporciona dicas e vídeos para aprimorar a
+                        sua gestão financeira.
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -273,7 +275,7 @@
           <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
             <li>
               <a
-                href="#"
+                href="index.html"
                 class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
                 >Home</a
               >
@@ -287,14 +289,14 @@
             </li>
             <li>
               <a
-                href="#"
+                href="sobrePage.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="contatoPage.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
