--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -115,6 +115,10 @@ body {
   max-width: 500px;
 }
 
+.max-width-550px {
+  max-width: 550px;
+}
+
 footer{
   background-color: #010D50;
   bottom: 0;
@@ -150,7 +154,7 @@ footer{
   color: #fff;
   border: none;
   border-radius: 60px;
-  width: 550px !important;
+  width: 600px !important;
   height: 200px;
   margin: 0;
 }
