--- a/stocktrade/src/main/resources/templates/contatoPage.html
+++ b/stocktrade/src/main/resources/templates/contatoPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
 
-    <title>StockTrade</title>
+    <title>StockTrade - Contato</title>
 
     <link
       rel="canonical"
@@ -99,7 +99,7 @@
       </div>
 
       <div class="container-fluid mt-5 justify-content-center pe-5 ps-5 mt-3">
-        <div class="row justify-content-center mt-5">
+        <div class="row justify-content-center mt-5 texts">
           <!-- Coluna dos campos do formulário -->
           <div class="col-md-6">
             <h1 class="h1">Contate-nos!</h1>
