--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -103,6 +103,10 @@ body {
   font-size: 16px;
 }
 
+.h4{
+  font-size: 56px;
+}
+
 .max-width-800px {
   max-width: 800px;
 }
@@ -157,6 +161,25 @@ footer{
   width: 600px !important;
   height: 200px;
   margin: 0;
+}
+
+.custom-card2 {
+  background-color: #010D50;
+  color: #fff;
+  border: none;
+  border-radius: 65px; /* Diminuí o raio para tornar o card mais arredondado */
+  max-width: 20px;
+}
+
+.img-fluid {
+  max-width: 100%; /* Garante que a imagem não ultrapasse o tamanho do card */
+  height: auto; /* Mantém a proporção da imagem */
+}
+
+.card-text {
+  color: #fff;
+  font-size: 16px;
+  margin-top: 15px; /* Ajuste conforme necessário */
 }
 
 .text-center {
